; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_activex.c_init_test.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_activex.c_init_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@plugin_behavior = common dso_local global i32 0, align 4
@activex_refcnt = common dso_local global i64 0, align 8
@TEST_NOQUICKACT = common dso_local global i32 0, align 4
@TEST_DISPONLY = common dso_local global i32 0, align 4
@no_quickact = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@have_container = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @init_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_test(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  store i32 %3, i32* @plugin_behavior, align 4
  store i64 0, i64* @activex_refcnt, align 8
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @TEST_NOQUICKACT, align 4
  %6 = icmp eq i32 %4, %5
  br i1 %6, label %11, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @TEST_DISPONLY, align 4
  %10 = icmp eq i32 %8, %9
  br label %11

11:                                               ; preds = %7, %1
  %12 = phi i1 [ true, %1 ], [ %10, %7 ]
  %13 = zext i1 %12 to i32
  store i32 %13, i32* @no_quickact, align 4
  %14 = load i32, i32* @TRUE, align 4
  store i32 %14, i32* @have_container, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
